Fix layout body transition on Safari

--- a/src/parts/layout.sass
+++ b/src/parts/layout.sass
@@ -76,6 +76,7 @@ html, body, #root
 		align-items: stretch
 
 		&-body
+			position: relative
 			overflow: auto
 			flex-grow: 1
 			-webkit-overflow-scrolling: touch
@@ -196,6 +197,7 @@ html, body, #root
 			position: static
 			transform: translate3d(0, 0, 0)
 			flex-grow: 1
+			flex-shrink: 1
 			box-shadow: -1px 0 0 rgba(#000, .05)
 
 		&-bg
